--- a/src/app.html
+++ b/src/app.html
@@ -24,6 +24,13 @@
 			gtag('config', 'G-BQ5S4F39WC');
 		</script>
 
+		<!-- Ahrefs tag -->
+		<script
+			src="https://analytics.ahrefs.com/analytics.js"
+			data-key="pVb8KGNuXqTdO90J899ANg"
+			async
+		></script>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
